Properly fixed card stretching in every instance

--- a/public/global.css
+++ b/public/global.css
@@ -212,9 +212,17 @@ input[type="radio"] {
   position: relative;
 }
 
-.card-inner:has(.card-img-back) .card-img-front,
+.card-inner:has(.card-img-back) .card-img-front {
+  position: relative;
+  z-index: 2;
+}
 .card-inner:has(.card-img-back) .card-img-back {
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
 
 .card-id {
